@@ -35,6 +35,7 @@ SubVersion: $Id$
 	- [roms]  $2276: GDK_WINDOW_TYPE_HINT_ was set to NORMAL instead of DIALOG. Very annoying because this makes the window appears in the top of all others.
 	- [roms]  $2277: fixed window resizing which was disabled (but note that Windows resizing is an ugly hack because
 			gtk_window_set_hints does not work properly under Windows).
+	- [roms]  $2278: set 'Debug file with TiEmu' unsensitive when build in no-gdb mode
 
 - 07/07/2006, version 2.81b
 	- [kevin] $2128: HW4 has 8 MB of FlashROM
